[package]
name = "mezzaluna-load-path"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = "Build the Ruby $LOAD_PATH at interpreter boot"
keywords = ["artichoke", "artichoke-ruby", "load-path", "ruby"]
categories = ["filesystem"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]

[features]
default = ["rubylib"]
# Enable a loader for RUBYLIB-style path strings.
rubylib = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
