[package]
name = "mezzaluna-loaded-features"
version = "0.8.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = "Types for tracking the state of a Ruby $LOAD_PATH"
keywords = ["artichoke", "artichoke-ruby", "load-path", "ruby"]
categories = ["filesystem"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
same-file = { version = "1.0.6", optional = true }
scolapasta-path = { version = "0.5.0", path = "../scolapasta-path" }

[features]
default = ["disk", "rubylib"]
rubylib = ["disk"]
disk = ["dep:same-file"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
