[package]
name = "mezzaluna-loaded-features"
version = "0.9.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = "Types for tracking the state of a Ruby $LOAD_PATH"
keywords = ["artichoke", "artichoke-ruby", "load-path", "ruby"]
categories = ["filesystem"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]

[dependencies.same-file]
version = "1.0.6"
optional = true

[features]
default = ["disk", "rubylib"]
rubylib = ["disk"]
disk = ["dep:same-file"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
