[package]
name = "mruby-gems"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[lib]
# Disable doctests because doctests execute from the crate directory instead of
# the workspace root. This causes the paths specified in RustEmbed derives to
# not resolve, which panics.
# TODO: Remove this workaround once this PR to interpolate env vars in paths is
# merged: https://github.com/pyros2097/rust-embed/pull/59
doctest = false

[dependencies.mruby]
path = "../mruby"

[dependencies.rust-embed]
version = "4.3.0"
features = ["debug-embed"]
