[package]
name = "mruby-sys"
version = "2.0.1-6"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"
links = "mruby"

[lib]
# Disable doctests because the C headers for mruby have doc strings containing
# indented ruby code blocks. bindgen pulls these doc strings into `src/ffi.rs`.
# cargo test attempts to run these as Rust doctests which fails to parse. It is
# not possible to annotate these doctests with `ignore` because you can only add
# attributes to fenced code blocks.
doctest = false

[dependencies]

[build-dependencies]
bindgen = "0.49.0"
cc = "1.0"
