[package]
name = "mruby"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[dependencies]
log = "0.4.6"
onig = "4.3.2"

[dependencies.mruby-sys]
path = "../mruby-sys"

[dependencies.mruby-vfs]
path = "../mruby-vfs"

[dev-dependencies]
env_logger = "0.6.1"
libc = "0.2"
quickcheck = "0.8"
quickcheck_macros = "0.8"
