[package]
name = "mruby"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[lib]
# Disable doctests because doctests execute from the crate directory instead of
# the workspace root. This causes the paths specified in RustEmbed derives to
# not resolve, which panics.
# TODO: Remove this workaround once this PR to interpolate env vars in paths is
# merged: https://github.com/pyros2097/rust-embed/pull/59
doctest = false

[dependencies]
log = "0.4.6"
onig = "4.3.2"
path_abs = "0.4.1"

[dependencies.mruby-sys]
path = "../mruby-sys"

[dependencies.mruby-vfs]
path = "../mruby-vfs"

[dev-dependencies]
env_logger = "0.6.1"
libc = "0.2"
quickcheck = "0.8"
quickcheck_macros = "0.8"
rust-embed = "4.4.0"
