[package]
name = "nemesis"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[dependencies]
log = "0.4.6"
rocket = "0.4.1"

[dependencies.mruby]
path = "../mruby"

[dependencies.mruby-gems]
path = "../mruby-gems"

[dependencies.rust-embed]
version = "4.3.0"
features = ["debug-embed"]
