[package]
name = "scolapasta-aref"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2021"
rust-version = "1.63.0"
description = """
Indexing utilities for Ruby containers – `#[]` or "aref"
"""
repository = "https://github.com/artichoke/artichoke"
readme = "README.md"
license = "MIT"
keywords = ["indexing", "no_std"]
categories = ["no-std", "rust-patterns"]

[dependencies]

[features]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
