[package]
name = "scolapasta-aref"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = """
Indexing utilities for Ruby containers – `#[]` or "aref"
"""
keywords = ["indexing", "no_std"]
categories = ["no-std", "rust-patterns"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]

[features]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
