[package]
name = "scolapasta-hex"
version = "0.2.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = """
no_std hexadecimal encoding utility package for Artichoke Ruby.
"""
keywords = ["base16", "encoding", "hex", "hexadecimal", "no_std"]
categories = ["encoding", "no-std"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]

[features]
default = ["std"]
# By default, `scolapasta-hex` is `no_std`. This feature enables APIs that
# depend on `std::io::Write`.
std = ["alloc"]
# By default, `scolapasta-hex` is `no_std`. This feature enables APIs that
# depend on `alloc::string::String`.
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
