[package]
name = "scolapasta-path"
version = "0.4.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = """
Path utilities for loading Ruby source code"
"""
keywords = ["filesystem", "path"]
categories = ["filesystem", "wasm"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]

[features]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
