[package]
name = "scolapasta-string-escape"
version = "0.2.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"
description = """
String escape code and debug formatting utility package for Artichoke Ruby.
"""
repository = "https://github.com/artichoke/artichoke"
readme = "README.md"
license = "MIT"
license-file = "../LICENSE"
keywords = ["artichoke", "escape", "no_std", "ruby"]
categories = ["encoding", "no-std", "parser-implementations"]

[dependencies]
bstr = { version = "0.2, >= 0.2.4", default-features = false }

[features]
default = ["std"]
# By default, `scolapasta-string-escape` is `no_std`. This feature enables
# `std::error::Error` impls.
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
