[package]
name = "scolapasta-string-escape"
version = "0.3.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2021"
rust-version = "1.64.0"
description = """
String escape code and debug formatting utility package for Artichoke Ruby.
"""
repository = "https://github.com/artichoke/artichoke"
readme = "README.md"
license = "MIT"
keywords = ["artichoke", "escape", "no_std", "ruby"]
categories = ["encoding", "no-std", "parser-implementations"]

[dependencies]
bstr = { version = "1.0.0", default-features = false }

[features]
default = ["std"]
# By default, `scolapasta-string-escape` is `no_std`. This feature enables
# `std::error::Error` impls.
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
