[package]
name = "scolapasta-string-escape"
version = "0.3.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = """
String escape code and debug formatting utility package for Artichoke Ruby.
"""
keywords = ["artichoke", "escape", "no_std", "ruby"]
categories = ["encoding", "no-std", "parser-implementations"]
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]

[dependencies.bstr]
version = "1.2.0"
default-features = false

[features]
default = ["std"]
# By default, `scolapasta-string-escape` is `no_std`. This feature enables
# `std::error::Error` impls.
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
