[package]
name = "spec-runner"
version = "0.7.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
description = "Binary for running Ruby Specs with Artichoke Ruby"
keywords = ["artichoke", "artichoke-ruby", "ruby", "ruby-spec", "testing"]
categories = ["development-tools::testing"]

[dependencies]
basic-toml = "0.1.1"
rust-embed = "6.3.0"
termcolor = "1.1.0"

[dependencies.artichoke]
version = "0.1.0-pre.0"
path = ".."
default-features = false
features = ["backtrace", "kitchen-sink"]

[dependencies.clap]
version = "4.3.10"
default-features = false
features = ["std", "help", "usage", "error-context", "suggestions"]

[dependencies.dhat]
version = "0.3.0"
optional = true

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dev-dependencies]

[dev-dependencies.bstr]
version = "1.2.0"
default-features = false

# `spec-runner` is a regression testing tool
# Remove it from the main artichoke workspace.
[workspace]
members = ["."]

[profile.release]
debug = true

[features]
dhat-heap = ["dep:dhat"]    # if you are doing heap profiling
dhat-ad-hoc = ["dep:dhat"]  # if you are doing ad hoc profiling

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
